--- a/paper/ref.bib
+++ b/paper/ref.bib
@@ -16,6 +16,25 @@
  keywords = {concurrency, monitoring, race, threading},
 } 
 
+@inproceedings{terboven2012assessing,
+  title={Assessing OpenMP tasking implementations on NUMA architectures},
+  author={Terboven, Christian and Schmidl, Dirk and Cramer, Tim and an Mey, Dieter},
+  booktitle={International Workshop on OpenMP},
+  pages={182--195},
+  year={2012},
+  organization={Springer}
+}
+
+@inproceedings{terboven2012task,
+  title={Task-parallel programming on NUMA architectures},
+  author={Terboven, Christian and Schmidl, Dirk and Cramer, Tim and an Mey, Dieter},
+  booktitle={European Conference on Parallel Processing},
+  pages={638--649},
+  year={2012},
+  organization={Springer}
+}
+
+
 @inproceedings{Blagodurov:2011:CNC:2002181.2002182,
  author = {Blagodurov, Sergey and Zhuravlev, Sergey and Dashti, Mohammad and Fedorova, Alexandra},
  title = {A Case for NUMA-aware Contention Management on Multicore Systems},
